second commit. It seems to work.

--- a/iwidget/templates/superuser.html
+++ b/iwidget/templates/superuser.html
@@ -1,4 +1,4 @@
-{% extends "enhydris/base.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %} {% trans 'Administrator view' %}{% endblock %}
