--- a/unexe/templates/casestudy/ukcsregistration.html
+++ b/unexe/templates/casestudy/ukcsregistration.html
@@ -8,7 +8,7 @@
 	<div class="col-md-6 col-md-offset-3">
     	<div class="panel panel-default">
 		<div class="panel-heading">
-		    <div class="panel-title">{% trans "Welcome to iWIDGET Account Sign up page" %}</div>
+		    <div class="panel-title">{% trans "Welcome to iWIDGET account registration" %}</div>
 		 </div>
 		 <div class="panel-body">
 		 <div id="signup-msg"></div>
