--- a/unexe/templates/casestudy/ukcsregistration.html
+++ b/unexe/templates/casestudy/ukcsregistration.html
@@ -29,7 +29,7 @@
 			    </div>
 			    <div class="form-group">
 			    	<label>Address</label>
-			    	<textarea class="form-control" rows="3" name="address" id="address" placeholder="Address"></textarea>
+			    	<textarea class="form-control" rows="3" name="address" id="address" placeholder="Address" required="true"></textarea>
 			    	<!--<input class="form-control" placeholder="Address" name="address" id="address" type="text" value="" required="true"> -->
 			    </div>			    
 			    	<!--
