--- a/unexe/templates/usecase/c_uc3.2.html
+++ b/unexe/templates/usecase/c_uc3.2.html
@@ -77,13 +77,16 @@ $(window).load(function() {
 	formutil.resetForm('#c_uc32-form');
 	
 	domutil.setselect("#c_uc32endyear",yearlist);
-    domutil.setselect("#c_uc31endyear",yearlist);
-    domutil.setselect("#c_uc31endyear2",yearlist);
 	domutil.setselect("#c_uc32styear",yearlist);
-    domutil.setselect("#c_uc31styear",yearlist);
-    domutil.setselect("#c_uc31styear2",yearlist);
 	domutil.setselect("#c_uc32_seasonyear",yearlist);
-	
+
+    domutil.setselect("#c_uc31endyear", yearlist);
+    domutil.setselect("#c_uc31endyear2", yearlist);
+    domutil.setselect("#c_uc31styear", yearlist);
+    domutil.setselect("#c_uc31styear2", yearlist);
+    domutil.setselect("#c_uc31swyear2", yearlist);
+    domutil.setselect("#c_uc31swyear1", yearlist);
+
 	//if(domutil.getradiovalue("#c_uc32_per")!="days")
 	//	$("#c_uc32_daterange").hide();	
 	
